--- a/index.html
+++ b/index.html
@@ -19,13 +19,23 @@
     </style>
 </head>
 <body>
-    <h1 style="color: navy;font-size:30px;"> HTML Journey - Task 2 </h1>
-    <p>In publishing and graphic design, Lorem ipsum (/ˌlɔː.rəm ˈɪp.səm/) is a placeholder text commonly used to demonstrate the visual form of a document or a typeface without relying on meaningful content. Lorem ipsum may be used as a placeholder before final copy is available. It is also used to temporarily replace text in a process called greeking, which allows designers to consider the form of a webpage or publication, without the meaning of the text influencing the design.</p>
-    <p>Lorem ipsum is typically a corrupted version of De finibus bonorum et malorum, a 1st-century BC text by the Roman statesman and philosopher Cicero, with words altered, added, and removed to make it nonsensical and improper Latin. The first two words themselves are a truncation of 'dolorem ipsum' ('pain itself').</p>
-    <h2>Popular Songs Used in Memes:</h2>
-    <ul>
-        <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ target="_blank">YouTube: Rick Astley - Never Gonna Give You Up (Official Music Video)</a></li>
-        <li><a href="https://www.youtube.com/watch?v=kemivUKb4f4" target="_blank">YouTube: Weezer - Buddy Holly (Official Music Video)</a></li>
-    </ul>
+    <header class="structural">
+        <h1 style="color: darkgreen;font-size:30px;"> HTML Journey - Task 3 </h1>
+    </header>
+    <main class="structural">
+        <h2>Wikipedia on Lorem Ipsum</h2>
+        <p id="para1">In publishing and graphic design, Lorem ipsum (/ˌlɔː.rəm ˈɪp.səm/) is a placeholder text commonly used to demonstrate the visual form of a document or a typeface without relying on meaningful content. Lorem ipsum may be used as a placeholder before final copy is available. It is also used to temporarily replace text in a process called greeking, which allows designers to consider the form of a webpage or publication, without the meaning of the text influencing the design.</p>
+        <p id = "para2">Lorem ipsum is typically a corrupted version of De finibus bonorum et malorum, a 1st-century BC text by the Roman statesman and philosopher Cicero, with words altered, added, and removed to make it nonsensical and improper Latin. The first two words themselves are a truncation of 'dolorem ipsum' ('pain itself').</p>
+    </main>
+    <aside class="structural">
+        <h2>Popular Songs Used in Memes:</h2>
+        <ul>
+            <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target= _blank>YouTube: Rick Astley - Never Gonna Give You Up (Official Music Video)</a></li>
+            <li><a href="https://www.youtube.com/watch?v=kemivUKb4f4" target="_blank">YouTube: Weezer - Buddy Holly (Official Music Video)</a></li>
+        </ul>
+    </aside>
 </body>
+<footer class="structural">
+    <p>&copy; Sébastien Violette 2023</p>
+</footer>
 </html>
