In Class Task 4

--- a/index.html
+++ b/index.html
@@ -7,21 +7,21 @@
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <title>My HTML Journey - Task 3</title>
-    <style>
-        li{
-            list-style-type: square;
-            line-height: 2em;
-            color: rgba(255, 055, 200, 0.7)
-        }
-        a{
-            color:rgba(188, 30, 143, 0.7)
-        }
-    </style>
 </head>
 <body>
     <header class="structural">
-        <h1 style="color: darkgreen;font-size:30px;"> HTML Journey - Task 3 </h1>
+        <h1> HTML Journey - Task 3 </h1>
     </header>
+    <nav class="structural">
+        <ul>
+            <li>
+                <a href="index.html">Home</a>
+            </li>
+            <li>
+                <a href="contact.html">Contact</a>
+            </li>
+        </ul>
+    </nav>
     <main class="structural">
         <h2>Wikipedia on Lorem Ipsum</h2>
         <p id="para1">In publishing and graphic design, Lorem ipsum (/ˌlɔː.rəm ˈɪp.səm/) is a placeholder text commonly used to demonstrate the visual form of a document or a typeface without relying on meaningful content. Lorem ipsum may be used as a placeholder before final copy is available. It is also used to temporarily replace text in a process called greeking, which allows designers to consider the form of a webpage or publication, without the meaning of the text influencing the design.</p>
