In Class Task 5

--- a/Gallery.html
+++ b/Gallery.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header class="structural">
-        <h1>My HTML Journey - Task 5</h1>
+        <h1>HTML Journey - Task 5</h1>
     </header>
     <nav class="structural">
         <ul>
@@ -26,10 +26,24 @@
         </ul>
     </nav>
     <section>
-        <main class="structural">
-            <h2>Wikipedia on Lorem Ipsum</h2>
-            <p id="para1">In publishing and graphic design, Lorem ipsum (/ˌlɔː.rəm ˈɪp.səm/) is a placeholder text commonly used to demonstrate the visual form of a document or a typeface without relying on meaningful content. Lorem ipsum may be used as a placeholder before final copy is available. It is also used to temporarily replace text in a process called greeking, which allows designers to consider the form of a webpage or publication, without the meaning of the text influencing the design.</p>
-            <p id = "para2">Lorem ipsum is typically a corrupted version of De finibus bonorum et malorum, a 1st-century BC text by the Roman statesman and philosopher Cicero, with words altered, added, and removed to make it nonsensical and improper Latin. The first two words themselves are a truncation of 'dolorem ipsum' ('pain itself').</p>
+        <main class="structural" id="gallery">
+            <figure>
+                <img src="images/html.png" alt="HTML Logo">
+                <figcaption>HTML</figcaption>
+            </figure>
+            <figure>
+                <img src="images/css.jpg" alt="CSS Logo">
+                <figcaption>CSS</figcaption>
+            </figure>
+            <figure>
+                <img src="images/git-github.png" alt="Git & GitHub Logo">
+                <br>
+                <ficaption>Git & GitHub</ficaption>
+            </figure>
+            <figure>
+                <img src="images/vscode_background.jpg" alt="Visual Studio Logo">
+                <figcaption>Visual Studio Code</figcaption>
+            </figure>
         </main>
         <aside class="structural">
             <h2>Popular Songs Used in Memes:</h2>
