--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <p id = "para2">Lorem ipsum is typically a corrupted version of De finibus bonorum et malorum, a 1st-century BC text by the Roman statesman and philosopher Cicero, with words altered, added, and removed to make it nonsensical and improper Latin. The first two words themselves are a truncation of 'dolorem ipsum' ('pain itself').</p>
         </main>
         <aside class="structural">
-            <h2>Popular Songs Used in Memes:</h2>
+            <h2>Popular Songs Used Within Memes:</h2>
             <ul>
                 <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target= _blank>YouTube: Rick Astley - Never Gonna Give You Up (Official Music Video)</a></li>
                 <li><a href="https://www.youtube.com/watch?v=kemivUKb4f4" target="_blank">YouTube: Weezer - Buddy Holly (Official Music Video)</a></li>
